crates/amaru-observability/macros/tests/ui/compile_fail/missing_required_field.stderr
error: Missing required field 'third' for schema SCHEMA. Required fields: first, second, third
  --> tests/ui/compile_fail/missing_required_field.rs:7:1
   |
 7 | / define_local_schemas! {
 8 | |     test {
 9 | |         sub {
10 | |             /// Test schema for missing required field test
...  |
18 | | }
   | |_^
...
21 |   #[trace(test::sub::SCHEMA)]
   |   --------------------------- in this attribute macro expansion
   |
   = note: this error originates in the macro `__SCHEMA_CHECK_THIRD` which comes from the expansion of the attribute macro `trace` (in Nightly builds, run with -Z macro-backtrace for more info)
